# finamaton

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/bot/: currency.rs  dispatcher.rs  mod.rs  optimizer.rs  processor.rs
src/bot/constants/: commands.rs  currency.rs  messages.rs  misc.rs  mod.rs  redis.rs  urls.rs
src/bot/handlers/: add_payment.rs  delete_payment.rs  edit_payment.rs  general.rs  mod.rs  pay_back.rs  settings.rs  spendings.rs  view_balances.rs  view_payments.rs
src/bot/redis/: balance.rs  chat.rs  connect.rs  manager.rs  mod.rs  payment.rs  request.rs  spending.rs  user.rs
src/bot/utils/: amounts.rs  bot_actions.rs  format.rs  mod.rs  time.rs
