[package]
name = "finamaton"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
redis = "0.23.3"
chrono = "0.4.30"
dotenv = "0.15.0"
thiserror = "1.0.58"
serde = "1.0.197"
serde_json = "1.0.114"
regex = "1.10.4"
chrono-tz = "0.9.0"
reqwest = { version = "0.12.3", features = ["json"] }

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[lib]
name = "finamaton"
path = "src/lib.rs"